更新MessageServicer